--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "SocialSparrow Product Extractor",
-  "version": "1.0",
+  "version": "1.0.0",
   "description": "Extract products from web pages using SocialSparrow API",
   "permissions": ["activeTab", "scripting"],
   "action": {
@@ -15,7 +15,7 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["socialsparrow.bundle.js", "content.js"]
+      "js": ["socialsparrow.bundle.js", "content.bundle.js"]
     }
   ],
   "web_accessible_resources": [
