--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "SocialSparrow Product Extractor",
+  "name": "AstuteAnaconda Product Extractor",
   "version": "1.0.0",
   "description": "Extract products from web pages using SocialSparrow API",
   "permissions": ["activeTab", "scripting"],
