--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,5 @@
-# Dependencies
-node_modules/
-.pnpm-store/
+node_modules
+dist
+packages
+.vite
 
-# Build output
-dist/
-packages/
-
-# Logs
-*.log
-npm-debug.log*
-pnpm-debug.log*
-
-# Editor directories and files
-.idea/
-.vscode/
-*.swp
-*.swo
-
-# OS files
-.DS_Store
-Thumbs.db
