--- a/package.json
+++ b/package.json
@@ -18,11 +18,7 @@
     "socialsparrow": "^0.3.8"
   },
   "pnpm": {
-    "onlyBuiltDependencies": [
-      "esbuild"
-    ],
-    "ignoredBuiltDependencies": [
-      "esbuild"
-    ]
+    "onlyBuiltDependencies": ["esbuild"],
+    "ignoredBuiltDependencies": ["esbuild"]
   }
 }
