--- a/src/manifest.json
+++ b/src/manifest.json
@@ -3,7 +3,7 @@
   "name": "AstuteAnaconda Product Extractor",
   "version": "1.0.0",
   "description": "Extract products from web pages using SocialSparrow API",
-  "permissions": ["activeTab", "scripting", "tabs", "alarms", "background"],
+  "permissions": ["activeTab", "scripting"],
   "action": {
     "default_popup": "popup.html",
     "default_icon": {
@@ -11,10 +11,6 @@
       "48": "icons/icon48.png",
       "128": "icons/icon128.png"
     }
-  },
-  "background": {
-    "service_worker": "background.bundle.js",
-    "type": "module"
   },
   "content_scripts": [
     {
