--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "astuteanaconda",
   "version": "1.0.0",
-  "description": "Chrome extension to extract products using SocialSparrow API",
+  "description": "Chrome extension to extract products using SocialSparrow API and send to DynamoDB",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -11,10 +11,12 @@
   },
   "devDependencies": {
     "eslint": "^9.23.0",
-    "vite": "^5.4.15",
-    "vite-plugin-static-copy": "^1.0.6"
+    "vite": "^6.2.3",
+    "vite-plugin-static-copy": "^2.3.0"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.774.0",
+    "@aws-sdk/lib-dynamodb": "^3.774.0",
     "socialsparrow": "^0.3.8"
   },
   "pnpm": {
