--- a/src/manifest.json
+++ b/src/manifest.json
@@ -15,7 +15,8 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["socialsparrow.bundle.js", "content.bundle.js"]
+      "js": ["socialsparrow.bundle.js", "content.bundle.js"],
+      "run_at": "document_idle"
     }
   ],
   "web_accessible_resources": [
