--- a/src/manifest.json
+++ b/src/manifest.json
@@ -21,9 +21,12 @@
   ],
   "web_accessible_resources": [
     {
-      "resources": ["socialsparrow.bundle.js", "content.bundle.js", "popup.bundle.js", "options.bundle.js", "*.map", "*.js.map"],
+      "resources": ["socialsparrow.bundle.js", "content.bundle.js", "popup.bundle.js", "options.bundle.js", "page-script.bundle.js", "*.map", "*.js.map"],
       "matches": ["<all_urls>"]
     }
   ],
-  "options_page": "options.html"
+  "options_page": "options.html",
+  "content_security_policy": {
+    "extension_pages": "script-src 'self'; object-src 'self'"
+  }
 }
