--- a/package.json
+++ b/package.json
@@ -11,14 +11,18 @@
   },
   "devDependencies": {
     "eslint": "^9.23.0",
-    "vite": "^6.2.3",
+    "vite": "^6.2.4",
     "vite-plugin-static-copy": "^2.3.0"
   },
   "dependencies": {
-    "socialsparrow": "^0.3.13"
+    "socialsparrow": "^0.3.14"
   },
   "pnpm": {
-    "onlyBuiltDependencies": ["esbuild"],
-    "ignoredBuiltDependencies": ["esbuild"]
+    "onlyBuiltDependencies": [
+      "esbuild"
+    ],
+    "ignoredBuiltDependencies": [
+      "esbuild"
+    ]
   }
 }
