--- a/package.json
+++ b/package.json
@@ -11,17 +11,19 @@
   },
   "devDependencies": {
     "eslint": "^9.23.0",
-    "vite": "^6.2.4",
+    "vite": "^6.2.5",
     "vite-plugin-static-copy": "^2.3.0"
   },
   "dependencies": {
-    "socialsparrow": "^0.3.14"
+    "socialsparrow": "^0.3.15"
   },
   "pnpm": {
-    "onlyBuiltDependencies": ["esbuild"],
-    "ignoredBuiltDependencies": ["esbuild"],
-    "overrides": {
-      "socialsparrow": "link:../../../Library/pnpm/global/5/node_modules/socialsparrow"
-    }
+    "onlyBuiltDependencies": [
+      "esbuild"
+    ],
+    "ignoredBuiltDependencies": [
+      "esbuild"
+    ],
+    "overrides": {}
   }
 }
